--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,25 +1,26 @@
-image: Ubuntu1804 # образ для сборки
+image: Ubuntu1804  # образ для сборки
 
-stack: node 12 # окружение
+stack: node 12  # окружение
 
 branches:
   only:
-    - master # ветка git
+    - main  # ветка git
+    - master  # ветка git
 
-cache: node_modules # кеширование
+cache: node_modules  # кеширование
 
 install:
-  - yarn # команда установки зависимостей
+  - yarn install  # команда установки зависимостей
 
-build: off
+build: off  # отключаем встроенную в appveyor систему сборки
 
 build_script:
-  - CI=false yarn build # команда сборки
+  - yarn run build   # команда сборки
 
 # test_script:
-# - yarn lint && yarn test # скрипт тестирования
+# - yarn run lint && yarn run test # скрипт тестирования
 
-deploy_script: # скрипт развёртывания
+deploy_script:  # скрипт развёртывания
   - git config --global credential.helper store
   - git config --global user.name AppVeyor
   - git config --global user.email ci@appveyor.com
