--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "ra_redux",
-  "version": "0.9.0",
-  "homepage": "./",
+  "name": "ra-redux",
+  "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/Garfy2/ra-redux/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "classnames": "^2.3.1",
-    "nanoid": "^3.1.23",
-    "prop-types": "^15.7.2",
+    "mini.css": "^3.0.1",
+    "nanoid": "^3.1.30",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.5",
-    "react-router-dom": "^5.3.0",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.1"
+    "redux": "^4.1.2",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
